[package]
name = "http-hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.1", features = ["full"] }
tokio = { version = "1.36", features = ["full"] }
tokio-rustls = "0.26.2"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rustls-pemfile = "2.2.0"
rustls = "0.23.23"
bytes = "1.10.0"
tower = "0.5.2"
